This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
2/12/25: Fixed hangs/timeouts receiving images over socket in SerialEM (In
4.1).

2/8/25: Fixed pixel sizes in frame stack mdoc file when there is a refined
pixel size defined.

2/8/25: Add script commands to report objective strength, update an imaging
state, and report properties of a state.

2/7/25: Fixed storing Search shift offsets in Search states (In 4.1).

2/5/25: Made sure Navigator files for multigrid all have Acquire polygons if
polygon montage selected.

2/5/25: New multigrid sessions will make files with underscore after the
prefix as indicated in dialog.

2/5/25: Added script command to report and set X Lens mode and the stored C2
aperture size used to scale intensities.

2/5/25: Added property to specify that Hitachi scope resets image shift in HC
mode (In 4.1).

2/4/25: SEM_4-1-20
2/4/25: Fixed beam size shown for multishot when using illuminated area,
broken 3/17/24 (In 4.1).

2/3/25: Fixed stepping camera length between D and LAD in scope control panel
(In 4.1).

1/27/25: Fixed initialization of some parameters (hex and custom) when
montaging with multiple Records (In 4.1).

1/24/25: SEM_4-2-0beta14
1/23/25: Made multigrid allow having hole vectors on just the first map.

1/23/25: Made program flash taskbar icon if it does not have focus when
message box goes up and at end of Navigator acquire or multigrid acquire.

1/12/24: Changed subset interface for multigrid to allow subset to start at a
given point and to acquire specified number of items or Records.

1/12/24: Cropped image after template align so it is easier to see if aligned.

1/12/24: In multigrid for JEOL, added radio buttons to select between C1 and