@@ -394,40 +394,20 @@ int CBaseSocket::ExchangeMessages(int sockInd, int *numExtraBytes)
 int CBaseSocket::FinishGettingBuffer(int sockInd, char *buffer, int numReceived, 
                                       int numExpected, int bufSize)
 {
-  int numNew, ind, err = 0;
-  DWORD timeout;
-  if (numExpected > 1024 && SEMGetRecvImageTimeout() > 0.) {
-    timeout = (DWORD)(SEMGetRecvImageTimeout() * 1000);
-    setsockopt(mServer[sockInd], SOL_SOCKET, SO_RCVTIMEO, (char*)&timeout,
-      sizeof(timeout));
-  }
-
+  int numNew, ind;
   while (numReceived < numExpected) {
 
     // If message is too big for buffer, just get it all and throw away the start
     ind = numReceived;
     if (numExpected > bufSize)
       ind = 0;
-    numNew = recv(mServer[sockInd], &buffer[ind], bufSize - ind, 0);
+     numNew = recv(mServer[sockInd], &buffer[ind], bufSize - ind, 0);
     if (numNew <= 0) {
-      if (WSAGetLastError() != WSAETIMEDOUT) {
-        err = 1;
-        break;
-      }
-      err = (numExpected - numReceived) + 1;
-      break;
+      return 1;
     }
-    if (numNew + numReceived < numExpected)
-      SEMTrace('K', "got %d new, total %d, left %d", numNew, numNew + numReceived,
-        numExpected - (numNew + numReceived));
     numReceived += numNew;
   }
-  if (numExpected > 1024 && SEMGetRecvImageTimeout() > 0.) {
-    timeout = (DWORD)(10000 * 1000);
-    setsockopt(mServer[sockInd], SOL_SOCKET, SO_RCVTIMEO, (char*)&timeout,
-      sizeof(timeout));
-  }
-  return err;
+  return 0;
 }
 
 // Send all or the remainder of a buffer
@@ -577,7 +557,7 @@ int CBaseSocket::SendAndReceiveForImage(int sockInd, short *imArray, long *arrSi
                                          long *width, 
                                          long *height, int bytesPerPixel)
 {
-  int numBytes, numChunks, nsent, chunkSize, numToGet, chunk, totalRecv = 0, err = 0;
+  int numBytes, numChunks, nsent, chunkSize, numToGet, chunk, totalRecv = 0;
   int numExtraBytes;
   double startTicks;
   mNumLongRecv[sockInd] = 4;
@@ -618,13 +598,8 @@ int CBaseSocket::SendAndReceiveForImage(int sockInd, short *imArray, long *arrSi
       }
     }
     numToGet = B3DMIN(numBytes - totalRecv, chunkSize);
-    err = FinishGettingBuffer(sockInd, (char *)imArray + totalRecv, 0, numToGet,
-      numToGet);
-    if (err) {
-      if (err > 1)
-        SEMTrace('K', "BaseSocket: Timeout while receiving image (chunk # %d) from "
-          "server; %d bytes left", chunk, err - 1);
-      else
+    if (FinishGettingBuffer(sockInd, (char *)imArray + totalRecv, 0, numToGet, 
+      numToGet)) {
         SEMTrace('K', "BaseSocket: Error %d while receiving image (chunk # %d) from "
           "server", WSAGetLastError(), chunk);
       mCloseBeforeNextUse[sockInd] = true;
