@@ -109,7 +109,6 @@ INT_PROP_TEST("AssumeCameraForDummy", mWinApp->, AssumeCamForDummy)
 BOOL_PROP_TEST("AllowCameraInSTEMmode", mWinApp->, AllowCameraInSTEMmode)
 BOOL_PROP_TEST("EnableExternalPython", mWinApp->, EnableExternalPython)
 INT_PROP_TEST("SpecialDebugLevel", mWinApp->, SpecialDebugLevel)
-FLOAT_PROP_TEST("SocketRecvImageTimeout", mWinApp->, RecvImageTimeout)
 FLOAT_PROP_TEST("TietzFilmShutterSwitchTime", camera->, TietzFilmSwitchTime)
 INT_PROP_TEST("DynamicFocusInterval", camera->, DynFocusInterval)
 INT_PROP_TEST("InitialDynamicFocusDelay", camera->, StartDynFocusDelay)
