@@ -581,14 +581,6 @@
             while acquiring data.</TD>
         </TR>
         <TR VALIGN="top">
-          <TD>SocketRecvImageTimeout</TD>
-          <TD>Set to a value in seconds to impose a timeout on &#39;recv&#39; calls for getting an 
-            image back from a plugin or Python after the initial response has been received.&nbsp; 
-            Some virtual networks can lose data and the whole image is never received, 
-            setting a timeout of 2 to 5 sec will let this failure time out sooner than the 
-            camera timeout.&nbsp; The timeout is set only when expecting a message bigger than 1024 bytes.</TD>
-        </TR>
-        <TR VALIGN="top">
           <TD>SmallFontsBad</TD>
           <TD>Set to 1 if the small fonts, such as in the Camera and Script control panel,
            are strangely pixelated and unreadable.</TD>
