@@ -3,6 +3,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+2/12/25: Eliminated property SocketRecvImageTimeout, it is not needed.
+
 2/12/25: Fixed hangs/timeouts receiving images over socket in SerialEM (In
 4.1).
 
